--- a/MySqlDatabase/App.config
+++ b/MySqlDatabase/App.config
@@ -15,6 +15,11 @@
     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
       </provider></providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="stackoverlfow"
+         connectionString="server=localhost;database=stackoverflow;uid=root;pwd=Nepal12"
+          providerName="MySql.Data.MySqlClient"/>
+  </connectionStrings>
 <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
