--- a/MySqlDatabase/MySqlDatabase.csproj
+++ b/MySqlDatabase/MySqlDatabase.csproj
@@ -70,6 +70,10 @@
       <Project>{5037c50a-b0e3-44b8-a9f9-e9ec0a031648}</Project>
       <Name>DataAccessLayer</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DomainModel\DomainModel.csproj">
+      <Project>{206dfef8-1465-4795-85a3-03b54e1430bc}</Project>
+      <Name>DomainModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
