Adding CRUD operation for Annotation and SearchHistory

--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -92,7 +92,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="stackoverlfow"
-         connectionString="server=localhost;database=stackoverflow;uid=root;pwd=localhost"
+         connectionString="server=localhost;database=stackoverflow;uid=root;pwd=Nepal12"
           providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
 <system.data>
