Section 3: Implementing Store Procedure for Search and setup for Section 3 frontend

--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Post.cs" />
     <Compile Include="PostType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search.cs" />
     <Compile Include="SearchHistory.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="User.cs" />
