--- a/WebApplication/packages.config
+++ b/WebApplication/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net452" />
+  <package id="jQuery" version="2.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net452" />
@@ -24,6 +26,8 @@
   <package id="MySql.Data" version="6.9.8" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="RequireJS" version="2.2.0" targetFramework="net452" />
+  <package id="RequireJS.Text" version="2.0.7" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
 </packages>
