Section 3: Using Bootstrap for making page responsive, Displaying the Post Detials. Redefining the URL for comments and answers, and showing detials of the post with its answer and comments.

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -226,6 +226,8 @@
     <Compile Include="Controllers\LinkPostsController.cs" />
     <Compile Include="Controllers\MarkedPostsController.cs" />
     <Compile Include="Controllers\ModelFactory.cs" />
+    <Compile Include="Controllers\PostsAnswersController.cs" />
+    <Compile Include="Controllers\PostsCommentsController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
     <Compile Include="Controllers\PostTypesController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
