Section 3: Adding mark to post and Adding annotation to post

--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -91,7 +91,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="stackoverlfow" connectionString="server=localhost;database=stackoverflow;uid=root;pwd=localhost" providerName="MySql.Data.MySqlClient" />
+    <add name="stackoverlfow" connectionString="server=localhost;database=stackoverflow;uid=root;pwd=Nepal12" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
