--- a/MySqlDatabase/App.config
+++ b/MySqlDatabase/App.config
@@ -16,7 +16,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="stackoverlfow" connectionString="server=localhost;database=stackoverflow;uid=root;pwd=localhost" providerName="MySql.Data.MySqlClient" />
+    <add name="stackoverlfow" connectionString="server=localhost;database=stackoverflow;uid=root;pwd=Nepal12" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
