Section3: Redefining the URL for tags related to post.

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Controllers\PostsAnswersController.cs" />
     <Compile Include="Controllers\PostsCommentsController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
+    <Compile Include="Controllers\PostsTagsController.cs" />
     <Compile Include="Controllers\PostTypesController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\SearchHistoriesController.cs" />
